package com.bgzyy.design.pattern.decorator.decoratorcoffee;

/**
 * @author bgzyy
 * @since 2019/9/19
 */
public class ShortBlack extends Coffee {
    public ShortBlack() {
        setDescription("美式咖啡");
        setPrice(10.0);
    }
}
